--- a/index.html
+++ b/index.html
@@ -10,5 +10,23 @@
 <h1>Purva Vilas Muley</h1>
 <p>Undergraduate student interested in observational cosmology, dark matter, and large scale structure.</p>
 
+<hr>
+
+<nav>
+  <a href="index.html">Home</a> |
+  <a href="about.html">About</a> |
+  <a href="research.html">Research</a> |
+  <a href="projects.html">Projects</a> |
+  <a href="cv.html">CV</a> |
+  <a href="contact.html">Contact</a>
+</nav>
+
+<hr>
+
+<p>
+Welcome to my academic website. I am preparing for research focused summer programmes
+and future graduate studies in physics and astronomy.
+</p>
+
 </body>
 </html>
