--- a/index.html
+++ b/index.html
@@ -2,31 +2,11 @@
 <html>
 <head>
   <title>Purva Vilas Muley</title>
-  <meta charset="UTF-8">
 </head>
-
 <body>
 
-<h1>Purva Vilas Muley</h1>
-<p>Undergraduate student interested in observational cosmology, dark matter, and large scale structure.</p>
-
-<hr>
-
-<nav>
-  <a href="index.html">Home</a> |
-  <a href="about.html">About</a> |
-  <a href="research.html">Research</a> |
-  <a href="projects.html">Projects</a> |
-  <a href="cv.html">CV</a> |
-  <a href="contact.html">Contact</a>
-</nav>
-
-<hr>
-
-<p>
-Welcome to my academic website. I am preparing for research focused summer programmes
-and future graduate studies in physics and astronomy.
-</p>
+<h1>THIS IS MY WEBSITE</h1>
+<p>If you can see this text, index.html is working.</p>
 
 </body>
 </html>
