--- a/index.html
+++ b/index.html
@@ -2,11 +2,70 @@
 <html>
 <head>
   <title>Purva Vilas Muley</title>
+  <meta charset="UTF-8">
+  <style>
+    body {
+      margin: 0;
+      padding: 40px;
+      font-family: "Georgia", serif;
+      background: radial-gradient(circle at top, #0b1d3a, #000000);
+      color: #eaeaea;
+      line-height: 1.7;
+    }
+
+    h1 {
+      font-size: 42px;
+      margin-bottom: 10px;
+      color: #ffffff;
+    }
+
+    p {
+      max-width: 800px;
+      font-size: 18px;
+    }
+
+    nav {
+      margin: 30px 0;
+      padding: 10px 0;
+      border-top: 1px solid #444;
+      border-bottom: 1px solid #444;
+    }
+
+    nav a {
+      color: #9ecbff;
+      text-decoration: none;
+      margin-right: 20px;
+      font-size: 16px;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
+
 <body>
 
-<h1>THIS IS MY WEBSITE</h1>
-<p>If you can see this text, index.html is working.</p>
+<h1>Purva Vilas Muley</h1>
+<p>
+Undergraduate student passionate about observational cosmology, dark matter,
+and the large scale structure of the Universe.
+</p>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="research.html">Research</a>
+  <a href="projects.html">Projects</a>
+  <a href="cv.html">CV</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<p>
+Welcome to my academic space. I am preparing for research focused summer programmes
+and future graduate studies in physics and astronomy, with a deep interest in
+understanding the invisible structure of the Universe.
+</p>
 
 </body>
 </html>
