--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
 
     <div class="hero-img">
-      <img src="https://lh3.googleusercontent.com/a/ACg8ocKsXMhICV6SPVzd8B0Cc0f0Dvry2vvqYbcZg-3oslvZo9gWNmg=s96-c" alt="Purva Vilas Muley">
+      <img src="photo.jpg" alt="Purva Vilas Muley">
     </div>
   </div>
 
