--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <title>About | Purva Vilas Muley</title>
   <meta charset="UTF-8">
+
   <style>
     body {
       margin: 0;
@@ -10,38 +11,53 @@
       font-family: "Georgia", serif;
       background: radial-gradient(circle at top, #0b1d3a, #000000);
       color: #eaeaea;
-      line-height: 1.7;
+      line-height: 1.8;
     }
 
     h1 {
       font-size: 36px;
       color: #ffffff;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-size: 24px;
+      color: #9ecbff;
+      margin-top: 40px;
     }
 
     p {
-      max-width: 900px;
+      max-width: 950px;
       font-size: 18px;
-      margin-bottom: 20px;
+      margin-bottom: 18px;
     }
 
-    a {
-      color: #9ecbff;
-      text-decoration: none;
+    ul {
+      max-width: 950px;
+      font-size: 18px;
+      margin-left: 20px;
     }
 
-    a:hover {
-      text-decoration: underline;
+    li {
+      margin-bottom: 10px;
     }
 
     nav {
-      margin: 30px 0;
+      margin: 25px 0 35px 0;
       padding: 10px 0;
       border-top: 1px solid #444;
       border-bottom: 1px solid #444;
     }
 
     nav a {
+      color: #9ecbff;
+      text-decoration: none;
       margin-right: 20px;
+      font-size: 16px;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -60,26 +76,107 @@
 </nav>
 
 <p>
-I am an undergraduate student driven by a deep curiosity about the Universe and its
-fundamental structure. My academic interests lie in observational cosmology, with a
-particular focus on dark matter and the large scale structure of the Universe.
+I am an undergraduate student, science educator, and early stage researcher with a
+strong interest in astronomy, astrophysics, and the physical understanding of the
+Universe. Over the past several years, I have actively engaged in astronomy education,
+research assistance, mentorship, and outreach, while continuously strengthening my
+theoretical and analytical foundation in physics and space science.
 </p>
 
 <p>
-I am especially interested in how galaxy groups and clusters can be used as tracers
-of underlying dark matter halos, and how observations across different wavelengths
-help reveal the physical processes shaping cosmic structure.
+My academic interests are centered on observational cosmology, dark matter, and the
+large scale structure of the Universe. I am particularly interested in how galaxy
+groups and clusters can be used as tracers of underlying dark matter halos, and how
+environmental effects influence galaxy evolution.
 </p>
 
 <p>
-Alongside coursework and independent study, I actively seek research environments
-that allow me to engage with real data, develop analytical thinking, and collaborate
-with researchers who are advancing our understanding of the cosmos.
+Alongside formal education, I have pursued extensive independent learning, research
+oriented projects, and teaching experiences that reflect both my curiosity about the
+cosmos and my commitment to scientific growth.
+</p>
+
+<h2>Academic and Teaching Experience</h2>
+
+<p>
+I currently work as an Astronomy Tutor and Research Associate at WhyCosmos, where I
+teach astronomy and astrophysics through structured courses and personalized mentorship.
+My role involves simplifying complex scientific concepts, developing research based
+learning material, and mentoring students for national and international competitions
+and academic examinations.
 </p>
 
 <p>
-My long term goal is to pursue graduate studies in physics or astronomy and contribute
-to fundamental research addressing open questions in cosmology.
+Previously, I have worked as a Tutor on Schoolhouse.world, providing personalized
+instruction and academic guidance to students across multiple subjects. These
+experiences have strengthened my ability to communicate complex ideas clearly,
+track learning progress, and foster analytical thinking.
+</p>
+
+<h2>Research and Technical Experience</h2>
+
+<p>
+I have gained hands on exposure to applied research through my internship at Omspace
+Rocket Exploration Private Limited, where I supported aerospace and space technology
+projects. My work included assisting in the design and study of refractor telescope
+systems, liquid rocket engine concepts, and related simulations, applying principles
+of optics, propulsion, fluid dynamics, and electromagnetism.
+</p>
+
+<p>
+Through these experiences, I developed skills in research documentation, technical
+analysis, and collaborative problem solving within multidisciplinary teams.
+</p>
+
+<h2>Projects</h2>
+
+<ul>
+  <li>Design and development of a refractor telescope using precision optics</li>
+  <li>Conceptual design and analysis of a liquid rocket engine for propulsion efficiency</li>
+  <li>Antenna design applying electromagnetic theory and simulation tools</li>
+  <li>Rocket nose cone design using Ansys for aerodynamic optimization</li>
+  <li>Rocket structure modeling and simulation using OpenRocket</li>
+  <li>Laser security system based on optics and sensor technologies</li>
+</ul>
+
+<h2>Awards and Honours</h2>
+
+<ul>
+  <li>Gold Honour, International Astronomy and Astrophysics Competition</li>
+  <li>Winner, National Mapathon, IIT Bombay</li>
+  <li>National Photo Contest Winner, Happy Foundation</li>
+  <li>Semi Finalist, International Youth Maths Challenge</li>
+</ul>
+
+<h2>Certifications and Learning Programmes</h2>
+
+<ul>
+  <li>New Space: Access to Space Basics, ISAE SUPAERO</li>
+  <li>Algebra: Elementary to Advanced – Functions and Applications, Johns Hopkins University</li>
+  <li>Algebra: Elementary to Advanced – Polynomials, Roots, Equations, and Inequalities, Johns Hopkins University</li>
+  <li>Math Prep: College and Work Ready, University of North Texas</li>
+</ul>
+
+<h2>Leadership, Outreach, and Volunteering</h2>
+
+<p>
+I have held leadership roles in astronomy and science outreach initiatives, including
+serving as President of Astronomy Conservationist Wardha and AstroClub. Through these
+roles, I have organized stargazing sessions, educational events, competitions, and
+community awareness programmes focused on dark sky preservation and scientific literacy.
+</p>
+
+<p>
+I have also participated in community service activities, including volunteering with
+ISKCON Temple initiatives focused on food and clothing distribution, strengthening my
+sense of social responsibility and teamwork.
+</p>
+
+<p>
+Through a combination of education, research exposure, teaching, and outreach, I am
+building the skills and mindset required for research oriented environments. I aim to
+pursue advanced studies in physics or astronomy and contribute meaningfully to our
+understanding of the Universe.
 </p>
 
 <p>
