--- a/cv.html
+++ b/cv.html
@@ -1,23 +1,173 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CV | Purva Vilas Muley</title>
+  <title>Curriculum Vitae | Purva Vilas Muley</title>
   <meta charset="UTF-8">
+
+  <style>
+    body {
+      margin: 0;
+      padding: 40px;
+      font-family: "Georgia", serif;
+      background: radial-gradient(circle at top, #0b1d3a, #000000);
+      color: #eaeaea;
+      line-height: 1.8;
+    }
+
+    h1 {
+      font-size: 36px;
+      color: #ffffff;
+    }
+
+    h2 {
+      font-size: 24px;
+      color: #9ecbff;
+      margin-top: 35px;
+    }
+
+    p {
+      max-width: 950px;
+      font-size: 18px;
+    }
+
+    ul {
+      max-width: 950px;
+      font-size: 18px;
+      margin-left: 20px;
+    }
+
+    li {
+      margin-bottom: 8px;
+    }
+
+    nav {
+      margin: 25px 0 35px 0;
+      padding: 10px 0;
+      border-top: 1px solid #444;
+      border-bottom: 1px solid #444;
+    }
+
+    nav a {
+      color: #9ecbff;
+      text-decoration: none;
+      margin-right: 20px;
+      font-size: 16px;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
 <body>
 
 <h1>Curriculum Vitae</h1>
 
-<p>
-This page will contain my academic CV including education, skills, and research experience.
-</p>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="research.html">Research</a>
+  <a href="projects.html">Projects</a>
+  <a href="cv.html">CV</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<h2>Personal Details</h2>
 
 <p>
-A downloadable PDF version will be added.
+<b>Name:</b> Purva Vilas Muley <br>
+<b>Location:</b> Wardha, Maharashtra, India <br>
+<b>Email:</b> purva7060@gmail.com
 </p>
 
-<a href="index.html">Back to Home</a>
+<h2>Academic Interests</h2>
+
+<p>
+Observational cosmology, dark matter, large scale structure of the Universe,
+galaxy groups and clusters, and galaxy environment.
+</p>
+
+<h2>Education</h2>
+
+<ul>
+  <li>
+    <b>Undergraduate Studies (Science, Physics focused)</b><br>
+    Ongoing
+  </li>
+  <li>
+    <b>Higher Secondary Education (Grade 12)</b>, Bajaj College of Science<br>
+    Percentage: 78
+  </li>
+  <li>
+    <b>Secondary Education (Grade 10)</b>, New English Academy of Genius<br>
+    Percentage: 80.6
+  </li>
+</ul>
+
+<h2>Research and Teaching Experience</h2>
+
+<ul>
+  <li>
+    <b>Astronomy Tutor and Research Associate</b>, WhyCosmos<br>
+    Teaching astronomy and astrophysics, mentoring students, and assisting in
+    research based educational content.
+  </li>
+  <li>
+    <b>Tutor</b>, Schoolhouse.world<br>
+    Academic tutoring and personalized mentorship.
+  </li>
+</ul>
+
+<h2>Technical and Research Skills</h2>
+
+<ul>
+  <li>Foundational programming: Python</li>
+  <li>Basic data analysis and visualization</li>
+  <li>Introductory numerical and analytical problem solving</li>
+  <li>Scientific documentation and report writing</li>
+  <li>Basic experience with simulations and modelling tools</li>
+</ul>
+
+<h2>Projects</h2>
+
+<ul>
+  <li>Refractor telescope design using optical principles</li>
+  <li>Liquid rocket engine conceptual design and analysis</li>
+  <li>Antenna design based on electromagnetic theory</li>
+  <li>Rocket nose cone design using Ansys</li>
+  <li>Rocket structure modelling using OpenRocket</li>
+  <li>Laser security system using optics and sensors</li>
+</ul>
+
+<h2>Awards and Honours</h2>
+
+<ul>
+  <li>Gold Honour, International Astronomy and Astrophysics Competition</li>
+  <li>Winner, National Mapathon, IIT Bombay</li>
+  <li>National Photo Contest Winner, Happy Foundation</li>
+  <li>Semi Finalist, International Youth Maths Challenge</li>
+</ul>
+
+<h2>Certifications</h2>
+
+<ul>
+  <li>New Space: Access to Space Basics – ISAE SUPAERO</li>
+  <li>Algebra: Elementary to Advanced – Johns Hopkins University</li>
+  <li>Math Prep: College and Work Ready – University of North Texas</li>
+</ul>
+
+<h2>Leadership and Outreach</h2>
+
+<ul>
+  <li>President, Astronomy Conservationist Wardha</li>
+  <li>President, AstroClub</li>
+  <li>Astronomy outreach, stargazing events, and science education initiatives</li>
+</ul>
+
+<p>
+<a href="index.html">← Back to Home</a>
+</p>
 
 </body>
 </html>
