--- a/contact.html
+++ b/contact.html
@@ -3,21 +3,95 @@
 <head>
   <title>Contact | Purva Vilas Muley</title>
   <meta charset="UTF-8">
+
+  <style>
+    body {
+      margin: 0;
+      padding: 40px;
+      font-family: "Georgia", serif;
+      background: radial-gradient(circle at top, #0b1d3a, #000000);
+      color: #eaeaea;
+      line-height: 1.8;
+    }
+
+    h1 {
+      font-size: 36px;
+      color: #ffffff;
+    }
+
+    h2 {
+      font-size: 24px;
+      color: #9ecbff;
+      margin-top: 30px;
+    }
+
+    p {
+      max-width: 900px;
+      font-size: 18px;
+      margin-bottom: 15px;
+    }
+
+    nav {
+      margin: 25px 0 35px 0;
+      padding: 10px 0;
+      border-top: 1px solid #444;
+      border-bottom: 1px solid #444;
+    }
+
+    nav a {
+      color: #9ecbff;
+      text-decoration: none;
+      margin-right: 20px;
+      font-size: 16px;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    .contact-box {
+      margin-top: 30px;
+      padding: 20px;
+      border: 1px solid #444;
+      max-width: 500px;
+      border-radius: 8px;
+      background-color: rgba(255, 255, 255, 0.03);
+    }
+  </style>
 </head>
 
 <body>
 
 <h1>Contact</h1>
 
+<nav>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
+  <a href="research.html">Research</a>
+  <a href="projects.html">Projects</a>
+  <a href="cv.html">CV</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
 <p>
-Email: purva7060@gmail.com
+For academic, research, or collaboration related enquiries, you may contact me using
+the details below.
+</p>
+
+<div class="contact-box">
+  <p><b>Name:</b> Purva Vilas Muley</p>
+  <p><b>Email:</b> purva7060@gmail.com</p>
+  <p><b>Location:</b> Wardha, Maharashtra, India</p>
+</div>
+
+<p>
+I am open to research discussions, academic collaborations, and opportunities related
+to astronomy, astrophysics, and physics education.
 </p>
 
 <p>
-This page will be updated with professional contact details.
+<a href="index.html">← Back to Home</a>
 </p>
-
-<a href="index.html">Back to Home</a>
 
 </body>
 </html>
